<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_small"
    app:cardElevation="@dimen/product_card_elevation"
    app:cardCornerRadius="@dimen/product_card_corner">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/prodname"
            android:scaleType="centerCrop"
            android:background="#F5F5F5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"/>

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prodname"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            android:textColor="#212121"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintTop_toBottomOf="@id/ivProductImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:textColor="#FF5252"
            android:layout_marginTop="@dimen/spacing_tiny"
            app:layout_constraintTop_toBottomOf="@id/tvProductName"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvProductStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock"
            android:textSize="@dimen/text_small"
            android:textColor="#757575"
            android:layout_marginTop="@dimen/spacing_tiny"
            app:layout_constraintTop_toBottomOf="@id/tvProductPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>